      memory, we throw an appropriate message)
    - Display proper exception if we try to exhaust all available shared memory
      segments (fixes #3)
    - Fix significant bug where at least on MacOS, if we generated a CRC of a
      key that was greater than 0x80000000, it would round down the key to that
      number exactly, casuing duplicates, and incorrect segment access
    - Added new()

1.04    2021-06-28
    - Skip unspawn tests for perls with -Duselongdouble, as Storable is not
      compatible storing/retrieving such numbers (closes #5)

1.03    2021-06-25
    - Add newline to singleton() warn so that it doesn't print out trace info

1.02    2021-06-25
    - Remove erroneous listing from MANIFEST
    - Work around issue in t/65-seg_size.t where MacOS and FreeBSD don't have
      the -i flag to ipcs (thanks for the PR, Roland Walker!)
    - Added singleton(), ensures that only a single instance of a script can
      run at any given time
    - Added tests to ensure we croak() if create is not set and the segment
      doesn't yet exist
    - Fix POD issue where we stated exclusive returns undef instead of croaking
      (fixes #10)
    - Change 'perl' shell call to $^X in t/71-unspawn.t (fixes #6)

1.01    2021-06-24
    - Added 'graceful' flag option. With exclusive, if a second process
      attempts to tie an exclusive segment, we exit gracefully instead of
      croaking

1.00    2021-06-09
    - Project adopted by Steve Bertrand
    - Added global_register() and process_register() to return the
      registries of active segments and semaphores
    - Added seg() and sem() methods, returns the structure of a shared
      memory segment and a sempahore respectively
    - Added initial "persist" hash variables. Separate processes (even
      multiple files in multiple windows) can share a variable, and it'll
      remain available even after all processes exit. The variable will be