@@ -22,7 +22,8 @@ Revision history for Perl extension IPC::Shareable.
     - Fix significant bug where at least on MacOS, if we generated a CRC of a
       key that was greater than 0x80000000, it would round down the key to that
       number exactly, casuing duplicates, and incorrect segment access
-    - Added new()
+    - Added new() method, returns a reference (default hash) without having to
+      do the tie() directly
 
 1.04    2021-06-28
     - Skip unspawn tests for perls with -Duselongdouble, as Storable is not
